--- a/app/src/main/res/layout/activity_filme_detalhe.xml
+++ b/app/src/main/res/layout/activity_filme_detalhe.xml
@@ -1,67 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_filme_detalhe"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FilmeDetalheActivity"
-    android:background="@android:color/black"
-    android:orientation="vertical">
-    <ImageView
-        android:id="@+id/detalhe_filme"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5"
-        android:scaleType="centerInside"
-        android:src="@drawable/cinema"/>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:orientation="vertical"
-            android:padding="10dp">
-            <TextView
-                android:id="@+id/detalhe_titulo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:text="Titulo do Filme"/>
-            <TextView
-                android:id="@+id/detalhe_data"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:layout_marginTop="5dp"
-                android:text="22/10/1979"/>
-            <TextView
-                android:id="@+id/detalhe_desc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceSmall"
-                android:layout_marginTop="5dp"
-                android:text="Um homem vive atormentado após perder a sua filha mais nova, cujo corpo nunca foi encontrado, mas sinais de que ela teria sido violentada e assassinada são encontrados em uma cabana nas montanhas. Anos depois da tragédia, ele recebe um chamado misterioso para retornar a esse local, onde ele vai receber uma lição de vida."/>
-            <RatingBar
-                android:id="@+id/detalhe_avaliacao"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@android:style/Widget.Holo.RatingBar.Indicator"
-                android:numStars="5"
-                android:layout_marginTop="5dp"
-                android:rating="4"/>
-            <Button
-                android:id="@+id/btn_trailer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@android:style/ButtonBar"
-                android:text="@string/btn"
-                android:textSize="25sp"
-                android:layout_marginTop="5dp"/>
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+    android:layout_height="match_parent"/>
