--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:name="com.stumpf.als.bollywood.MainFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    <ListView
-        android:id="@+id/list_filmes"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
-</FrameLayout>
+    android:layout_height="match_parent" />
