--- a/app/src/main/res/layout/item_fime_destaque.xml
+++ b/app/src/main/res/layout/item_fime_destaque.xml
@@ -1,40 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+    <ImageView
+        android:id="@+id/principal_post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/black"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/principal_post"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="7"
-            android:scaleType="centerInside"
-            android:src="@drawable/cinema" />
-        <TextView
-            android:id="@+id/principal_desc"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="Um homem vive atormentado após perder a sua filha mais nova, cujo corpo nunca foi encontrado, mas sinais de que ela teria sido violentada e assassinada são encontrados em uma cabana nas montanhas. Anos depois da tragédia, ele recebe um chamado misterioso para retornar a esse local, onde ele vai receber uma lição de vida."
-            android:textAppearance="?android:textAppearanceSmall"
-            android:textColor="@android:color/white" />
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:src="@drawable/cinema" />
+    <TextView
+        android:id="@+id/principal_titulo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="Captão America e Homem de Ferro"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:textColor="@android:color/white"
+        android:background="@color/colorrPrincipal"
+        android:layout_alignTop="@+id/principal_post"
+        android:textStyle="bold"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorrPrincipal"
+        android:layout_alignBottom="@+id/principal_post"
+        android:padding="5dp">
         <RatingBar
             android:id="@+id/principal_avaliacao"
-            style="@android:style/Widget.Holo.Light.RatingBar.Indicator"
+            style="@style/Widget.AppCompat.RatingBar.Indicator"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_weight="1"
             android:numStars="5"
+            android:padding="10dp"
             android:rating="3" />
-    </LinearLayout>
-</ScrollView>
+    </FrameLayout>
+</RelativeLayout>
