--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
     <ListView
         android:id="@+id/list_filmes"
+        style="@style/BollywoodStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
